2011-01-26  John W. Eaton  <jwe@octave.org>

	* lex.ll, graphics.cc, gl-render.cc, ov-mex-fcn.h, graphics.h.in:
	Delete trailing whitespace.

2011-01-26  John W. Eaton  <jwe@octave.org>

	Bug #32242.

	* ov.h, ov.cc (octave_value::undef_subsasgn): New function.
	* ov-class.h, ov-class.cc (octave_class::undef_subsasgn,
	octave_class::subsasgn_common): New functions.
	* ov-base.h, ov-base.cc (octave_base_value::subsasgn): If
	undefined, undef_subsasgn on object returned by
	octave_value::empty_conv.
	(octave_base_value::undef_subsasgn): New virtual function.
	(octave_base_value::subsasgn): Only handle case of undefined
	values here.

2011-01-26  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>
	    John W. Eaton  <jwe@octave.org>

	* graphics.h.in (scaler::scaler (const std::string&)): New constructor.
	(graphics_handle::operator++, graphics_hanlde::operator--):
	Implement as recommended by Effective C++.

	* graphics.h.in (class base_property, class array_property,
	class children_property, class property, class graphics_xform,
	class graphics_event): Explicitelly iniatialize
	all data members in constructor initialisation list.
	* gl-render.cc (class patch_tesselator): Likewise
	* graphics.cc (class radio_values, class gh_manager),
	(class callback_event, class set_event): Likewise.

	* graphics.h.in (class base_graphics_property): Disallow copying.
	* graphics.cc (class function_event): Likewise.
	(function_event::function_event (void)): Delete implementation.

2011-01-25  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/config-module.awk: Use automake variable for 
	portability.
	* Makefile.am (uninstall-oct): Use GNU Make features for portability

2011-01-25  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/fft.cc, DLD-FUNCTIONS/fft2.cc, DLD-FUNCTIONS/fftn.cc,
	load-save.cc: Make docstrings static by removing documentation
	depending on #ifdef configuration variables.

2011-01-25  John W. Eaton  <jwe@octave.org>

	* Makefile.am (OCT_STAMP_FILES): New variable.